<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/handlee"
        android:text="@string/sliding_tiles"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_top_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:theme="@style/ButtonTheme"
            app:iconTint="@color/colorPrimary"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/high"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/high" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setting"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quit"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setting" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>