<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_bar_height"
        android:background="@color/colorGradientEnd"
        android:elevation="@dimen/custom_bar_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:text="@string/difficulty"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b1"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            android:text="@string/easy"
            app:cornerRadius="@dimen/button_corner_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/message"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            android:text="@string/medium"
            app:cornerRadius="@dimen/button_corner_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/b3"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonTheme"
            android:text="@string/hard"
            app:cornerRadius="@dimen/button_corner_radius"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin2"
        android:text="@string/back"
        android:theme="@style/ButtonTheme"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>