<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dialog_margin_top"
        android:layout_marginBottom="@dimen/dialog_margin_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_text_view_height"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/pause"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resume"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/restart"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resume" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mainmenu"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:text="@string/main_menu"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>