<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dialog_margin_top"
    android:layout_marginBottom="@dimen/dialog_margin_bottom">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dialog_icon_image_view_dimens"
        android:layout_height="@dimen/dialog_icon_image_view_dimens"
        android:src="@drawable/ic_emoji_events_black_18dp"
        android:tint="@color/colorYellow"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/complete"
        android:textStyle="bold"
        android:padding="@dimen/dialog_text_view_padding"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon" />


    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:padding="@dimen/dialog_text_view_padding"
        android:text="@string/completion_note"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_button_bar_top_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_button_margin_start_end"
            android:layout_marginEnd="@dimen/dialog_button_margin_start_end"
            android:text="@string/replay"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toStartOf="@id/nAction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nAction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dialog_button_margin_start_end"
            android:layout_marginEnd="@dimen/dialog_button_margin_start_end"
            android:text="@string/next"
            android:theme="@style/ButtonTheme"
            app:cornerRadius="@dimen/button_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pAction"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>